--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activities.ProfileFragment"
     android:orientation="vertical"
     android:weightSum="10"
@@ -34,21 +34,21 @@
                 android:id="@+id/txtProfile"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Profile"
+                android:text="Edit your profile"
                 android:textColor="@color/text_2"
                 android:textStyle="bold"
                 android:textSize="20dp"
                 app:layout_constraintTop_toTopOf="@id/imageBack"
                 app:layout_constraintBottom_toBottomOf="@id/imageBack"
                 app:layout_constraintStart_toEndOf="@id/imageBack"
-                app:layout_constraintEnd_toStartOf="@id/btnSetting"
+                app:layout_constraintEnd_toStartOf="@id/btnSave"
                 android:textAlignment="center"/>
             <FrameLayout
-                android:id="@+id/btnSetting"
+                android:id="@+id/btnSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/text_2"
-                android:background="@drawable/ic_setting"
+                android:background="@drawable/ic_save"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -68,19 +68,21 @@
                 android:layout_height="150dp"
                 android:layout_gravity="center"/>
         </androidx.cardview.widget.CardView>
-        <TextView
+
+        <EditText
             android:id="@+id/txtName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Le Thien An"
-
+            android:layout_marginTop="4dp"
+            android:background="@color/theme_color"
+            android:text="No Information"
+            android:textAlignment="center"
             android:textColor="@color/text_2"
             android:textSize="30dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/profileImg"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:textAlignment="center"/>
+            app:layout_constraintTop_toBottomOf="@id/profileImg" />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -121,12 +123,13 @@
                         android:textColor="@color/text_2"
                         android:textSize="20dp"/>
                 </LinearLayout>
-                <TextView
-                    android:id="@+id/txtEmail"
+                <EditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="No information"
                     android:textSize="15dp"
+                    android:backgroundTint="@color/white"
                     android:textColor="@color/text_2"
                     android:paddingStart="35dp"/>
                 <FrameLayout
@@ -199,13 +202,14 @@
                         android:textSize="20dp"/>
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/txtAddress"
+                <EditText
+                    android:id="@+id/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingStart="35dp"
                     android:text="No information"
                     android:textColor="@color/text_2"
+                    android:backgroundTint="@color/white"
                     android:textSize="15dp" />
 
                 <FrameLayout
@@ -253,45 +257,6 @@
                     android:layout_height="5dp"
                     android:background="@drawable/info_background"/>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="30dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_logout"
-                        android:backgroundTint="@color/text_2"/>
-                    <TextView
-                        android:id="@+id/txtLogout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:text="Log out"
-                        android:textStyle="bold"
-                        android:textColor="#0c4ca2"
-                        android:textSize="20dp"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Log out your account"
-                    android:textSize="15dp"
-                    android:textColor="@color/text_2"
-                    android:paddingStart="35dp"/>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="5dp"
-                    android:background="@drawable/info_background"/>
-            </LinearLayout>
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
